Fix double scroll within virtual list

--- a/src/components/ProviderGamesList/ProviderGamesList.scss
+++ b/src/components/ProviderGamesList/ProviderGamesList.scss
@@ -1,4 +1,3 @@
 .c-provider-games-list {
   $provider-bar: 71px;
-  height: calc(100vh - #{$provider-bar} - var(--play-okay-bar-height, 0));
 }
